src/objects/Case_Approvers__mdt/Case_Approvers__mdt.object-meta.xml
<CustomObject>
    <description>RMA Request BU  Approvers</description>
    <label>RMA Request Approver</label>
    <pluralLabel>RMA Request Approvers</pluralLabel>
</CustomObject>