src/objects/Case_Approvers__mdt/fields/CFO_User__c.field-meta.xml
<CustomField>
    <fullName>CFO_User__c</fullName>
    <description>CFO User Email</description>
    <label>CFO User</label>
    <type>Email</type>
</CustomField>