src/objects/Case_Approvers__mdt/fields/Data_n_W_BU_GM__c.field-meta.xml
<CustomField>
    <fullName>Data_n_W_BU_GM__c</fullName>
    <description>Data n/W BU GM</description>
    <label>Data n/W BU GM</label>
    <type>Email</type>
</CustomField>