src/objects/Case_Approvers__mdt/fields/Optical_IC_BU_GM__c.field-meta.xml
<CustomField>
    <fullName>Optical_IC_BU_GM__c</fullName>
    <description>Optical IC BU GM</description>
    <label>Optical IC BU GM</label>
    <type>Email</type>
</CustomField>