src/objects/Case_Approvers__mdt/fields/SVP_Of_Sales__c.field-meta.xml
<CustomField>
    <fullName>SVP_Of_Sales__c</fullName>
    <description>SVP Of Sales</description>
    <label>SVP Of Sales</label>
    <type>Email</type>
</CustomField>