src/objects/Case_Approvers__mdt/fields/Wavelength_BU_GM__c.field-meta.xml
<CustomField>
    <fullName>Wavelength_BU_GM__c</fullName>
    <description>Wavelength BU GM Email</description>
    <label>Wavelength BU GM</label>
    <type>Email</type>
</CustomField>