src/objects/Case_Approvers__mdt/fields/X3D_Sensing_BU_GM__c.field-meta.xml
<CustomField>
    <fullName>X3D_Sensing_BU_GM__c</fullName>
    <description>3D Sensing BU GM Email</description>
    <label>3D Sensing BU GM</label>
    <type>Email</type>
</CustomField>